# qemu-lite-wrapper

./: Cargo.toml  README.md
src/: lib.rs
src/launcher/: mod.rs  process.rs
src/launcher/json/: mod.rs  qemu_launch_args_json.rs
src/launcher/qemu_args/: mod.rs  qemu_arg.rs  qemu_launch_args.rs
src/qmp/: dispatcher.rs  mod.rs
src/qmp/commands/: command_impls.rs  mod.rs  qmp_command.rs  qmp_send_error.rs  qmp_sender.rs
src/qmp/messages/: macros.rs  mod.rs  qmp_error.rs  qmp_event.rs  qmp_greeting.rs  qmp_kind.rs  qmp_message.rs  qmp_payload.rs  qmp_reply.rs  qmp_unknown.rs
src/qmp/streams/: error_stream.rs  event_stream.rs  macros.rs  message_stream.rs  mod.rs  reply_stream.rs  unknown_stream.rs
src/qmp/types/: mod.rs  qmp_id.rs  qmp_timestamp.rs
src/vm/: mod.rs  vm_controller.rs  vm_instance.rs  vm_manager.rs
