[package]
name = "qemu-lite-wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = { version = "1.0", features = ["raw_value"] } 
log         = "0.4"
env_logger = "0.10" 
shell-words = "1.1"

[lib]
name = "qemu_lite_wrapper"
crate-type = ["lib"]

[package.metadata.release]
sign-commit = true
push = true
push-remote = "origin"
publish = false
consolidate-commits = true
pre-release-commit-message = "Release {{version}}"